# android_armv8_aarch64_jit

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  executable_mem.c  executable_mem.h  getting-started.cc  getting-started.h  jit.c  jit.h  jitdemo.c
app/src/main/cpp/tcc/: config.mak  configure  libtcc.c  tcc.c  tcc.h  tccelf.c  tccgen.c  tcclib.h  tccpp.c  test_tcc.c  test_tcc.h
app/src/main/cpp/tcc/lib/: lib-arm64.c
app/src/main/cpp/vixl/aarch64/: assembler-aarch64.h  cpu-aarch64.h  macro-assembler-aarch64.cc  macro-assembler-aarch64.h
app/src/main/java/com/park/jitdemo/: MainActivity.java  NativeBridge.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
